--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -287,8 +287,13 @@ a {
     max-width: 370px;
     height: 466px;
     border-radius: 12px;
-    background: #fff;
+    background: transparent;
+    border: 1px solid #e2dfda;
+}
+.popular .list-courses-item:hover {
     box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+    border: none;
+    background: #fff;
 }
 
 .popular .list-courses .image {
